Handling error Back to SocksWebProxy and Org.Mentalis instead of Nuget Package, because some error reading remote data.

--- a/TorFileDownload.csproj
+++ b/TorFileDownload.csproj
@@ -35,6 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Org.Mentalis, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dll\Org.Mentalis.dll</HintPath>
+    </Reference>
+    <Reference Include="SocksWebProxy, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dll\SocksWebProxy.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -69,9 +77,10 @@
     <PackageReference Include="Microsoft.Windows.SDK.Contracts">
       <Version>10.0.19041.1</Version>
     </PackageReference>
-    <PackageReference Include="SocksWebProxy">
-      <Version>1.0.5</Version>
-    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DLL\Org.Mentalis.dll" />
+    <Content Include="DLL\SocksWebProxy.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
